# theworcoder-desktop

./: .gitmodules  README.md  main.py  pyproject.toml  theworcoder.kv
